Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-47653

atspiadaptor incorrectly marshalls GetCharacterExtents

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • None
    • 5.5.0
    • None

      Hello,

      As reported on https://bugzilla.redhat.com/show_bug.cgi?id=1067366 and fixed by patch https://bugzilla.redhat.com/attachment.cgi?id=865746 , the atspi adaptor in qt does not properly marshall GetCharacterExtents. Please consider applying the proposed patch.

        1. kde-show-from-fedora.patch
          1 kB
          Samuel Thibault
        2. kde-show-from-fedora.patch
          1 kB
          Samuel Thibault
        3. patch
          2 kB
          Samuel Thibault
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            frederik Frederik Gladhorn
            sthibaul Samuel Thibault
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes