Fix signature of getCharacterExtents

The function used to return {iiii} (QRect) but should return just iiii.
This is a backport from Qt 5.

See also QTBUG-47653